[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/ui/game/move_list/border_p1.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/game/move_list.gd" type="Script" id=2]
[ext_resource path="res://graphics/ui/game/move_list/goto/attack.png" type="Texture" id=3]
[ext_resource path="res://resources/font/pixel_intv.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/font/savior1.tres" type="DynamicFont" id=5]
[ext_resource path="res://graphics/ui/game/move_list/arrow.png" type="Texture" id=6]

















[node name="move_list" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="char_spr" type="Sprite" parent="."]
position = Vector2( -31, 0 )
texture = ExtResource( 3 )

[node name="label_char" type="Label" parent="."]
margin_left = 75.0
margin_top = -34.0
margin_right = 143.0
margin_bottom = -20.0
rect_rotation = 90.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Shoto Goto"
align = 1

[node name="label_move" type="Label" parent="."]
margin_left = -66.0
margin_top = -32.0
margin_right = 66.0
margin_bottom = -18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.501961, 0.501961, 1 )
custom_constants/line_spacing = -3
text = "Blazing Sun"
align = 1

[node name="label_desc" type="Label" parent="."]
margin_left = -4.0
margin_top = -23.0
margin_right = 62.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.501961 )
custom_constants/line_spacing = -3
text = "Can be angled by holding Up/Down.
"
align = 1
valign = 1
autowrap = true

[node name="label_command" type="Label" parent="."]
margin_left = -62.0
margin_top = 16.0
margin_right = 4.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.501961, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 0.501961 )
custom_constants/line_spacing = -5
text = "ATTACK"
align = 1
autowrap = true

[node name="label_page" type="Label" parent="."]
margin_left = -32.0
margin_top = 25.0
margin_right = 34.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0705882, 0.341176, 1 )
custom_constants/line_spacing = -5
text = "1"
align = 1
autowrap = true

[node name="arrow_left" type="Sprite" parent="."]
modulate = Color( 1, 0.501961, 0.501961, 1 )
position = Vector2( -9, 33 )
texture = ExtResource( 6 )

[node name="arrow_right" type="Sprite" parent="."]
modulate = Color( 1, 0.501961, 0.501961, 1 )
position = Vector2( 10, 33 )
scale = Vector2( -1, 1 )
texture = ExtResource( 6 )
